argocd/applications/attic/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: attic
  namespace: attic
  labels:
    app.kubernetes.io/name: attic
    app.kubernetes.io/component: nix-cache
spec:
  type: ClusterIP
  selector:
    app.kubernetes.io/name: attic
  ports:
    - name: http
      port: 80
      targetPort: http
